--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_redux: ^0.10.0
   redux_logging: ^0.5.0
   http: ^0.13.5
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
