--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   redux_logging: ^0.5.0
   http: ^0.13.5
   flutter_secure_storage: ^8.0.0
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_test:
