--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  redux: ^5.0.0
   flutter_redux: ^0.10.0
   redux_logging: ^0.5.0
   http: ^0.13.5
   flutter_secure_storage: ^8.0.0
   shared_preferences: ^2.1.1
+  redux_thunk: ^0.4.0
 
 dev_dependencies:
   flutter_test:
